--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
+      <script>window.top.location.href = "http://www.example.com";</script>
   </body>
 </html>
