--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-      <script>window.top.location.href = "http://www.example.com";</script>
+      <script>
+        
+        //window.top.location.href = "http://www.example.com";
+    
+    </script>
   </body>
 </html>
